modules/noosphere/taghmata/nixidy/manifests/prod/vikunja/Service-vikunja.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vikunja
    app.kubernetes.io/service: vikunja
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: vikunja-2.0.0
  name: vikunja
  namespace: vikunja
spec:
  ports:
    - name: http
      port: 3456
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  type: ClusterIP
